[package]
name = "moneta_bin"
version = "0.1.0"
edition = "2021"
description = "A set of macros to function profiling"
repository = "https://github.com/Defmc/moneta"
keywords = ["macro", "logging", "profiling"]
categories = ["accessibility", "caching", "development-tools"]
license = "MIT"

[dependencies]
hashbrown = "0.13.1"
lazy_static = "1.4.0"
moneta_fn = { path = "moneta", default-features = false, features = ["count", "cache"]}

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "benches"
harness = false
path = "src/benches.rs"
