[package]
name = "moneta_fn"
version = "0.2.3"
edition = "2021"
description = "A set of macros to function profiling"
repository = "https://github.com/Defmc/moneta"
keywords = ["macro", "logging", "profiling"]
categories = ["accessibility", "caching", "development-tools"]
license = "MIT"

[dependencies]
hashbrown = "0.13.1"
lazy_static = "1.4.0"
macros = { path = "src/macros" }

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "benches"
harness = false
path = "src/benches.rs"

[features]
default = ["trace", "count", "time", "cache"]
count = ["macros/count"]
trace = ["macros/trace"]
time = ["macros/time"]
visible = ["macros/visible"]
cache = ["macros/cache"]

[workspace]
members = ["src/macros"]
