[package]
name = "moneta_fn"
version = "0.2.9"
edition = "2021"
description = "A set of macros to function profiling"
repository = "https://github.com/Defmc/moneta"
keywords = ["macro", "logging", "profiling"]
categories = ["accessibility", "caching", "development-tools"]
license = "MIT"

[dependencies]
hashbrown = "0.13.1"
once_cell = "1.16.0"
moneta_fn_macros = { path = "src/macros", version = "0.2.9", default-features = false }

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "benches"
harness = false
path = "src/benches.rs"

[features]
default = ["trace", "count", "time", "cache"]
count = ["moneta_fn_macros/count"]
trace = ["moneta_fn_macros/trace"]
time = ["moneta_fn_macros/time"]
visible = ["moneta_fn_macros/visible"]
cache = ["moneta_fn_macros/cache"]

[workspace]
members = ["src/macros"]
