[package]
name = "moneta_fn"
version = "0.1.0"
edition = "2021"
description = "A set of macros to function profiling"
repository = "https://github.com/Defmc/moneta"
keywords = ["macro", "logging", "profiling"]
categories = ["accessibility", "caching", "development-tools"]
license = "MIT"

[dependencies]
hashbrown = { version = "0.13.1", optional = true }
lazy_static = { version = "1.4.0", optional = true }
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.105", features = ["full", "fold"] }

[features]
default = ["count", "trace", "time", "cache"]
count = []
trace = []
time = []
cache = ["lazy_static", "hashbrown"]

[lib]
proc-macro = true
