[package]
name = "moneta_fn"
version = "0.2.2"
edition = "2021"
description = "A set of macros to function profiling"
repository = "https://github.com/Defmc/moneta"
keywords = ["macro", "logging", "profiling"]
categories = ["accessibility", "caching", "development-tools"]
license = "MIT"

[dependencies]
darling = "0.14.2"
hashbrown = { version = "0.13.1", optional = true }
lazy_static = { version = "1.4.0", optional = true }
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.105", features = ["full", "fold"] }

[features]
default = ["count", "trace", "time", "cache"]
count = []
trace = []
time = []
visible = []
cache = ["lazy_static", "hashbrown"]

[lib]
proc-macro = true

[package.metadata.cargo-udeps.ignore]
normal = ["lazy_static", "hashbrown"]
