[package]
name = "moneta_fn_macros"
version = "0.2.11"
edition = "2021"
description = "A set of macros to function profiling"
repository = "https://github.com/Defmc/moneta"
keywords = ["macro", "logging", "profiling"]
categories = ["accessibility", "caching", "development-tools"]
license = "MIT"

[dependencies]
darling = "0.14.2"
proc-macro2 = "1.0.50"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full", "fold"] }

[features]
count = []
trace = []
time = []
visible = []
cache = []
depth = []

[lib]
proc-macro = true
